auth:department:controller:swagger
